--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+
+server.port=9090
 neo.title=\u7EAF\u6D01\u7684\u5FAE\u7B11
 neo.description=\u5206\u4EAB\u6280\u672F\uFF0C\u54C1\u5473\u751F\u6D3B
 spring.mvc.view.prefix=/WEB-INF/jsp/
