--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,10 @@
 		<spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
 		<tomcat.version>8.5.55</tomcat.version>
 
+		<mybatis-starter.version>2.0.0</mybatis-starter.version>
+		<mybatis-plus-starter.version>3.4.2</mybatis-plus-starter.version>
+		<mybatis-plus-generator.version>3.5.1</mybatis-plus-generator.version>
+		<mybatis-plus-dynamic-datasource.version>3.4.1</mybatis-plus-dynamic-datasource.version>
 	</properties>
 
 	<dependencies>
@@ -137,17 +141,12 @@
 			<version>0.14</version>
 		</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>com.alibaba</groupId>-->
-<!--			<artifactId>druid-spring-boot-starter</artifactId>-->
-<!--			<version>1.1.10</version>-->
-<!--		</dependency>-->
 
-<!--		<dependency>-->
-<!--			<groupId>mysql</groupId>-->
-<!--			<artifactId>mysql-connector-java</artifactId>-->
-<!--			<scope>runtime</scope>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>tk.mybatis</groupId>
@@ -256,6 +255,22 @@
 			<version>3.3.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>1.1.10</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.baomidou</groupId>
+			<artifactId>mybatis-plus-boot-starter</artifactId>
+			<version>3.4.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.baomidou</groupId>
+			<artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+			<version>3.4.1</version>
+		</dependency>
 
 
 	</dependencies>
