--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -85,6 +85,7 @@ spring:
     favicon:
       enabled: false
 
+
 #------------------kafka---------------
 #spring.kafka:
 #  bootstrap-servers: localhost:9092
@@ -110,11 +111,31 @@ spring:
 #  　　 password: root
 
 #spring.datasource:
-#  type: com.alibaba.druid.pool.DruidDataSource
-#  driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
-#  url: jdbc:sqlserver://192.168.100.108:1433;databaseName=Config
-#  username: sa
-#  password: Fzf8BEAta?ybFhKJgH>8
+#  druid:
+#    stat-view-servlet:
+#      enabled: true
+#  dynamic:
+#    primary: test #设置默认的数据源或者数据源组,默认值即为master
+#    strict: false #设置严格模式,默认false不启动. 启动后在未匹配到指定数据源时候会抛出异常,不启动则使用默认数据源.
+#    druid:
+#      #max-wait: 5
+#      time-between-eviction-runs-millis: 3000
+#      min-evictable-idle-time-millis: 50000
+#      max-evictable-idle-time-millis: 150000
+#      validation-query: SELECT 1
+#      test-while-idle: true
+#    datasource:
+#      test:
+#        url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8
+#        username: root
+#        password: root
+#        driver-class-name: com.mysql.jdbc.Driver
+#        druid:
+#          initial-size: 1
+#          min-idle: 1
+#          max-active: 3
+
+
 
 
 spring.servlet:
